<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/DetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:padding="5dp"
    android:orientation="vertical">


    <!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:id="@+id/relativeRecycler"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_weight="40"-->
        <!--android:layout_height="0dp">-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:layout_gravity="left"
            android:src="@mipmap/ic_contact_picture"
            android:scaleType="fitXY"
            android:id="@+id/pictMain"/>
        <!--android:src="@mipmap/ic_launcher"-->
        <EditText
            android:id="@+id/edittextnama"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:hint="@string/nama"
            android:layout_gravity="bottom"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:maxLength="30"
            />

    <!--</FrameLayout>-->

    <LinearLayout
        android:id="@+id/HPLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="8"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:src="@mipmap/ic_call_black"
            android:id="@+id/hpIcon"/>

        <EditText
            android:id="@+id/edittextnomorHP"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:inputType="number"
            android:maxLength="15"
            android:hint="@string/nomorhp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/KantorLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="8"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:src="@mipmap/ic_work_black"
            android:id="@+id/officeIcon"/>

        <EditText
            android:id="@+id/edittextnomorKantor"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:inputType="number"
            android:maxLength="15"
            android:hint="@string/nomorkantor"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/RumahLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="8"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:src="@mipmap/ic_home_black"
            android:id="@+id/homeIcon"/>

        <EditText
            android:id="@+id/edittextnomorRumah"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:inputType="number"
            android:maxLength="15"
            android:hint="@string/nomorrumah" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/EmailLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="8"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:src="@mipmap/ic_email_black"
            android:id="@+id/emailIcon"/>

        <EditText
            android:id="@+id/edittextemail"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:hint="@string/email"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/WebLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="8"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:src="@mipmap/ic_web_black"
            android:id="@+id/webIcon"/>

        <EditText
            android:id="@+id/edittextwebsite"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:inputType="textWebEditText"
            android:maxLength="100"
            android:hint="@string/website"/>

    </LinearLayout>

</LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_menu_save"
            android:layout_gravity="bottom|end" />

</FrameLayout>